modal spacing fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -437,6 +437,7 @@ li.item.item-checkbox.textfield {
       width: 100%;
       display: block; }
     .modal .modal-inherit .content-wrapper .content {
+      padding-top: 10px;
       background-color: white; }
       .modal .modal-inherit .content-wrapper .content .content-actual {
         font-size: 18px;
